@@ -6,6 +6,7 @@
  - Uses shared_ptr if available.
  - binarystring::str() is no longer cached; no longer returns reference.
  - Fixed problems in Visual C++ Makefile for test suite.
+ - Fixed problems with RPM packaging.
 3.0
  - Website is now at http://pqxx.org/ (no redirects)
  - Completely replaced cursor classes
